# workproof

./: .gitignore  .workproof.yml  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  workproof.yml
docs/: DEMO.md  SCHEMA.md
examples/demo-repo/: .workproof.yml  README.md  calculator.py  test_calculator.py
examples/demo-repo/.github/workflows/: workproof.yml
scripts/: acceptance_test.sh  debug_chain.py  sandbox_tree_equality.py
src/workproof/: __init__.py  attester.py  canonical.py  chain.py  cli.py  crypto.py  git_analysis.py  heuristics.py  keyring.py  policy.py  receipt.py  runner.py  session.py  verifier.py
tests/: test_action.py  test_allow_ancestor.py  test_canonical.py  test_chain.py  test_cli.py  test_crypto.py  test_demo_workflow.py  test_evidence_freshness.py  test_git_analysis.py  test_heuristics.py  test_laundering.py  test_receipt.py  test_sabotage_ancestor.py
tests/golden/: receipt_v0.1.json  receipt_v0.2.json
