[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workproof-cli"
version = "0.1.0"
description = "Deterministic evidence layer for AI-assisted pull requests. No LLM calls."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Workproof Contributors" }]
keywords = ["supply-chain", "attestation", "in-toto", "ai", "pull-request", "evidence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pynacl>=1.5.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/workproof/workproof"
Issues = "https://github.com/workproof/workproof/issues"

[project.scripts]
workproof = "workproof.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workproof = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # Typer uses defaults in function args by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["workproof"]
